--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
    ========================================================================== */
 
 html {
-  color: #222;
+  color: #d9d9d9;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -86,6 +86,232 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/* ---------- General Styles --------- */
+
+html {
+  font-size: 16px;
+}
+
+body {
+  background-color: #353535;
+  font-size: 1em;
+  font-family: 'Raleway', sans-serif;
+}
+
+ul, li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: #d9d9d9;
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5 {
+  color: #3C6E71;
+  line-height: 1.5;
+  width: 100%;
+}
+
+p {
+  color: #ffffff;
+}
+
+h1, h2, h3 {
+  font-family: 'Signika Negative', sans-serif;
+}
+
+h1 {
+  font-size: 1.75rem;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
+p, li {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+span {
+  font-weight: bold;
+}
+
+img {
+  margin: 20px 0 0 0;
+  filter: drop-shadow(1px 2px 6px #c79d2f);
+  width: 100%;
+}
+
+address {
+  font-style: normal;
+}
+
+.project-link {
+  font-size: 1.125rem;
+  text-transform: uppercase;
+}
+
+/* ---------- Structural Styles ---------- */
+
+.content {
+  text-align: center;
+}
+
+header,
+footer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-flow: row wrap;
+}
+
+.content-wrapper {
+  width: 80%;
+}
+
+/****** Zero Margins *****/
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin: 0;
+}
+
+/***** Set margins and paddings *****/
+
+.hero-area {
+  margin: 0;
+}
+
+h2 {
+  padding: 40px 0 40px 0;
+}
+
+h3 {
+  margin-bottom: 20px;
+}
+
+h4 {
+  margin: 0 0 40px 0;
+}
+
+.project-link {
+  margin: 1.5rem 0rem;
+}
+
+.footer {
+  margin: 120px 0 0 0;
+}
+
+footer {
+  padding: 80px 0;
+}
+
+.contact-info {
+  margin: 0 0 40px 0;
+}
+
+.copyright {
+  margin-top: 50px;
+}
+
+/* -------------------- Base Header Styles -------------------- */
+
+header {
+  padding: 30px 0 140px 0;
+}
+
+header h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  margin: 0;
+}
+
+.header-divider {
+  background: #dddddd;
+  width: 100%;
+  height: 1px;
+  margin: 40px 0 40px 0;
+}
+
+#navbar {
+  overflow: hidden;
+  background-color: #284B63;
+}
+
+/* #navbar.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 0 10px 0;
+  justify-content: space-evenly;
+  z-index: 1;
+}
+
+.navbarOffsetMargin {
+  padding-top: 45px;
+} */
+
+nav a.active {
+  color: #c79d2f;
+  background: #161717;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+  font-size: 1.125rem;
+  font-weight: 400;
+  width: 100%;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+header nav ul li {
+  font-size: 1.125rem;
+}
+
+ul li a:hover {
+  color: #c79d2f;
+}
+
+
+
+
 
 /* ==========================================================================
    Helper classes
