--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
+w/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
 /* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /*
@@ -12,7 +12,7 @@
    ========================================================================== */
 
 html {
-  color: #d9d9d9;
+  color: #222;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -86,164 +86,89 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/* ---------- General Styles --------- */
+
+/*-- General Styles --*/
 
 html {
   font-size: 16px;
 }
 
 body {
-  background-color: #353535;
   font-size: 1em;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
 }
 
-ul, li {
+ul, ol {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
+h1, h2, h3, h4, a, p {
+  color: #e2e3ed;
+}
+
 a {
-  color: #d9d9d9;
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5 {
-  color: #3C6E71;
-  line-height: 1.5;
-  width: 100%;
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+  font-weight: 500;
+  margin: 0;
+}
+
+h3, h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125em;
+  font-weight: 500;
+  margin: 20px 0;
 }
 
 p {
-  color: #ffffff;
-}
-
-h1, h2, h3 {
-  font-family: 'Signika Negative', sans-serif;
-}
-
-h1 {
-  font-size: 1.75rem;
-}
-
-h2 {
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.25rem;
-}
-
-h5 {
-  font-size: 1.5rem;
-}
-
-p, li {
-  font-size: 1rem;
-  line-height: 1.5;
-}
-
-span {
-  font-weight: bold;
+  font-size: 0.875em;
+  line-height: 1.285;
 }
 
 img {
-  margin: 20px 0 0 0;
-  filter: drop-shadow(1px 2px 6px #c79d2f);
   width: 100%;
+}
+
+figure {
+  margin: 0;
 }
 
 address {
   font-style: normal;
 }
 
-.project-link {
-  font-size: 1.125rem;
-  text-transform: uppercase;
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
 }
-
-/* ---------- Structural Styles ---------- */
-
-.content {
-  text-align: center;
-}
+ /* ----------------------- Base Header - Footer Styles ------------------*/
 
 header,
 footer {
+  background-color: #202322;
   display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
   flex-flow: row wrap;
-}
-
-.content-wrapper {
-  width: 80%;
-}
-
-/****** Zero Margins *****/
-
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
-  margin: 0;
-}
-
-/***** Set margins and paddings *****/
-
-.hero-area {
-  margin: 0;
-}
-
-h2 {
-  padding: 40px 0 40px 0;
-}
-
-h3 {
-  margin-bottom: 20px;
-}
-
-h4 {
-  margin: 0 0 40px 0;
-}
-
-.project-link {
-  margin: 1.5rem 0rem;
-}
-
-.footer {
-  margin: 120px 0 0 0;
-}
-
-footer {
-  padding: 80px 0;
-}
-
-.contact-info {
-  margin: 0 0 40px 0;
-}
-
-.copyright {
-  margin-top: 50px;
-}
-
-/* -------------------- Base Header Styles -------------------- */
+ }
 
 header {
-  padding: 30px 0 140px 0;
-}
+  padding: 15px 0;
+  }
 
-header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 header .content-wrapper {
@@ -252,40 +177,13 @@ header .content-wrapper {
   align-items: center;
   flex-flow: row wrap;
   margin: 0;
-}
+ }
 
 .header-divider {
-  background: #dddddd;
+  background: #3a3a3a;
   width: 100%;
   height: 1px;
-  margin: 40px 0 40px 0;
-}
-
-#navbar {
-  overflow: hidden;
-  background-color: #284B63;
-}
-
-nav h3 {
-  color: #d9d9d9;
-}
-/* #navbar.sticky {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 20px 0 10px 0;
-  justify-content: space-evenly;
-  z-index: 1;
-}
-
-.navbarOffsetMargin {
-  padding-top: 45px;
-} */
-
-nav a.active {
-  color: #c79d2f;
-  background: #161717;
+  margin: 10px 0 17px 0;
 }
 
 header nav {
@@ -293,38 +191,247 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
-  font-size: 1.125rem;
-  font-weight: 400;
-  width: 100%;
-}
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
+  width: 60%;
+ }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
   width: 100%;
-}
+ }
 
 header nav ul li {
-  font-size: 1.125rem;
+  font-size: 1.125em;
 }
 
-ul li a:hover {
-  color: #c79d2f;
+footer {
+  flex-direction: column;
+  text-align: center;
 }
 
-
-/* ==================== Mobile Styles ==================== */
-
-.hero-area .content-wrapper {
-  width: 100%;
+footer .contact {
+  margin-bottom: 50px;
 }
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .social-icons p i {
+  font-size: 1.3em;
+}
+
+footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+.copyright p {
+  font-size: 0.875em;
+  line-height: 16.8px;
+}
+
+/* ------------- Mobile styles - Homepage ---------------*/
 
 .hero-area {
+ display: flex;
+ justify-content: center;
+ flex-flow: row wrap;
+ background: url('../img/jake-melara-30679-unsplash.jpg') center no-repeat #333;
+ background-size: cover;
+ min-height: 500px;
+}
+
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+aside {
+  background-color: #527158;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+aside .form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  border: 0;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 0.625em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 10px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.features {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  background: url('../img/full-backgroundbw.png') center no-repeat;
+  background: url('../img/rawpixel-800820-unsplash1.jpg') no-repeat center;
   background-size: cover;
+
+}
+
+.features .features-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+.features h2 {
+  margin-bottom: 63px;
+}
+
+.features article {
+  width: 55%;
+  margin: 25px 0;
+}
+
+.features p {
+  text-align: center;
+  margin: 0;
+}
+
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 30px;
+}
+
+.reviews {
+  background-color: #2a423a;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.reviews h2 {
+  margin-bottom: 30px;
+  line-height: 1;
+}
+
+.reviews h3 {
+  width: 50%;
+  margin: 20px 0;
+ }
+
+/* ============== About Page ============== */
+
+.mission {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  background-color: #527158;
+}
+
+.mission h2 {
+  margin: 0;
+}
+
+.map figure {
+  width: 100%;
+  height: 0;
+  padding-bottom: 125%;
+  overflow: hidden;
+  position: relative;
+}
+
+.map iframe {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  background-color: #2a423a;
+}
+
+.contact-content p {
+  margin: 0;
+}
+
+/* ============== FAQ Page ============== */
+
+.faq {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  background-color: #527158;
+}
+
+.faq-content {
+  margin-bottom: 50px;
+}
+
+.faq .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  margin: 50px 0 0 0;
+}
+
+.faq h2 {
+  margin-bottom: 40px;
+  line-height: 1;
+}
+
+.faq-content h4 {
+  line-height: 1.333;
+  margin: 0;
 }
 
 
@@ -416,15 +523,343 @@ ul li a:hover {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+
+    /******** Tablet styles here ********/
+
+  .content-wrapper {
+    max-width: 640px;
+    margin: 50px 0;
+  }
+  /*  ==================================================================
+      Homepage
+      ================================================================== */
+
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
+  h4 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
+    /* Header */
+
+  header {
+    justify-content: space-around;
+    padding: 30px 0;
+  }
+
+  header figure {
+    width: 29%;
+  }
+
+  header .content-wrapper {
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  header nav {
+   width: 25%;
+  }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+
+  header nav li {
+    font-size: 1em;
+  }
+
+  .header-divider {
+    display: none;
+  }
+
+      /* Hero area */
+
+  .hero-area {
+    min-height: 600px;
+  }
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin:0;
+  }
+
+      /* Aside */
+
+  aside .content-wrapper {
+    display:flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+    margin: 20px 0 40px 0;
+  }
+
+  aside .content-wrapper .form-description {
+    width: 40%;
+    margin: 0;
+  }
+
+  aside .content-wrapper .form {
+    width: 45%;
+    margin: 0;
+  }
+
+      /* Features */
+
+  .features article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 50%;
+    flex-flow: column wrap;
+  }
+
+  .features i {
+    margin-bottom: 30px;
+  }
+
+  .features .features-item-description {
+    width: 64%;
+  }
+
+      /* Reviews */
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews article div,
+  .reviews article figure {
+    width: 49%;
+  }
+
+  .reviews h2 {
+    width: 80%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
+  }
+
+      /* Footer */
+
+  footer .content-wrapper {
+    width: 65%;
+    margin: 100px 0;
+  }
+
+  footer .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+    line-height: 1.285;
+  }
+
+  footer .contact {
+    margin-bottom: 0;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
+  }
+
+  footer .copyright {
+    width: 100%;
+  }
+
+  /*  ===================================================================
+      About Page
+      =================================================================== */
+
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+  }
+
+  .mission-content p {
+    width: 45%;
+  }
+
+  .mission .content-wrapper {
+    margin: 50px;
+  }
+
+  .map figure {
+    padding-bottom: 45%;
+  }
+
+  .contact-section .content-wrapper h2 {
+    width: 80%;
+  }
+
+  .contact-section .content-wrapper {
+    margin: 50px;
+  }
+
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
+  /*  ===================================================================
+      FAQ Page
+      =================================================================== */
+  .faq .content-wrapper {
+    justify-content: space-between;
+  }
+
+  .faq-content {
+    flex-basis: 45%;
+  }
+
+  .faq h2 {
+    width: 100%;
+  }
+
+  .faq h4,
+  .faq p {
+    font-size: 0.875em;
+    line-height: 1.125;
+  }
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+@media only screen and (min-width: 1200px) {
+
+    /******** Desktop styles here ********/
+
+  .content-wrapper {
+    max-width: 960px;
+  }
+
+  /*  ==================================================================
+      Homepage
+      ================================================================== */
+
+  header {
+    padding: 15px 0;
+  }
+
+  header nav {
+   width: 20%;
+  }
+
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3, h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.333;
+  }
+
+      /* Hero area */
+
+  .hero-area h1 {
+    font-size: 3.75em;
+    width: 80%;
+  }
+
+      /* Aside */
+
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 27%;
+    margin: 0;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
+  }
+      /* Features */
+
+  .features article {
+    flex-basis: 33%;
+  }
+
+  .features h2 {
+    width: 85%;
+  }
+      /* Reviews */
+
+  .reviews article div {
+    width: 38%;
+  }
+
+  .reviews h2 {
+    padding-bottom: 45px;
+  }
+
+  footer h4 {
+    font-size: 1.875em;
+  }
+
+    /*  ===================================================================
+        About Page
+        =================================================================== */
+
+  .mission h2,
+  .contact-section .content-wrapper h2 {
+    font-size: 3em;
+    width: 96%;
+  }
+
+  .map figure {
+    padding-bottom: 37%;
+  }
+
+  .contact-content h4 {
+    font-size: 1.875em;
+  }
+
+    /*  ===================================================================
+        FAQ Page
+        =================================================================== */
+
+  .faq h2 {
+    font-size: 3em;
+    width: 100%;
+  }
+
+  .faq h4,
+  .faq p {
+    font-size: 1.125em;
+    line-height: 1;
+  }
 }
 
 /* ==========================================================================
@@ -501,4 +936,3 @@ ul li a:hover {
     page-break-after: avoid;
   }
 }
-
