--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ w/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
    ========================================================================== */
 
 html {
-  color: #222;
+  color: #f4f4f4;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -150,9 +150,8 @@ address {
 }
  /* ----------------------- Base Header - Footer Styles ------------------*/
 
-header,
-footer {
-  background-color: #202322;
+header {
+  background-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -208,6 +207,7 @@ header nav ul li {
 }
 
 footer {
+  background-color: #DCD0C0;
   flex-direction: column;
   text-align: center;
 }
@@ -260,7 +260,7 @@ footer .copyright {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
- background: url('../img/jake-melara-30679-unsplash.jpg') center no-repeat #333;
+ background: url('../img/cropped-Bob_Wilber_Sidney_Bechet_Gottlieb_09161-1024x615.jpg') center no-repeat #333;
  background-size: cover;
  min-height: 500px;
 }
