--- a/css/main.css
+++ b/css/main.css
@@ -231,10 +231,33 @@ header .content-wrapper {
  }
 
 .header-divider {
-  background: #3a3a3a;
+  background: #373737;
   width: 100%;
   height: 1px;
   margin: 10px 0 17px 0;
+}
+
+#navbar {
+  overflow: hidden;
+  background-color: #DCD0C0;
+}
+
+#navbar.sticky {
+  background: #373737;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 0 10px 0;
+  justify-content: space-evenly;
+  z-index: 1;
+}
+
+#navbar.sticky a {
+  color: #C0B283;
+}
+.navbarOffsetMargin {
+  padding-top: 45px;
 }
 
 header nav {
