--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ footer .copyright {
   margin-top: 15px;
 }
 
-.features {
+.welcome-area {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -378,32 +378,22 @@ footer .copyright {
 
 }
 
-.features .features-items {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-
+.welcome-area .content-wrapper {
+  width: 95%;
 }
 
-.features h2 {
+.welcome-area h2 {
   text-align: center;
   font-weight: 700;
 }
 
-.features article {
-  width: 55%;
-  margin: 25px 0;
-}
-
-.features p {
-  text-align: center;
+.welcome .welcome-text p {
+  text-align: left;
   margin: 0;
 }
 
-.features i {
-  font-size: 3.75em;
-  margin-bottom: 30px;
+.welcome-text {
+  margin-bottom: 1em;
 }
 
 .hero-two {
