Changed Contact heading to h3. Separated h3 and h4 font-sizes. Changed margins of content-wrapper. Decreased footer padding. Altered hero-two background to min-height 400. Commented out aside section. Changed footer flex-direction to row.

--- a/css/main.css
+++ b/css/main.css
@@ -127,9 +127,16 @@ h2 {
 
 h3, h4 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.125rem;
   font-weight: 500;
   margin: 20px 0;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.375rem;
 }
 
 p, li {
@@ -152,7 +159,7 @@ address {
 
 .content-wrapper {
   width: 90%;
-  margin: 50px 0;
+  margin: 70px 0 50px 0;
 }
 
 /* ------------------------ Structural Styles --------------------------- */
@@ -194,7 +201,7 @@ h4 {
 }
 
 footer {
-  padding: 80px 0;
+  padding: 55px 0;
 }
 
 .hero-area {
@@ -285,6 +292,11 @@ footer .contact {
   margin-bottom: 50px;
 }
 
+footer h3 {
+  color: #373737;
+  margin-bottom: 40px;
+}
+
 footer p {
   margin: 0;
 }
@@ -294,6 +306,7 @@ footer .content-wrapper {
   flex-flow: row wrap;
   justify-content: center;
   align-items: flex-start;
+  margin-top: 50px;
   width: 100%;
 }
 
@@ -386,13 +399,14 @@ footer .copyright {
 }
 
 .welcome-text {
+  font-size: 1.125rem;
   margin-bottom: 1em;
 }
 
 .hero-two {
   background: url('../img/bob-nik-arborsjazz.jpg') top no-repeat #333;
   background-size: cover;
-  min-height: 500px;
+  min-height: 400px;
 }
 
 /* ============== About Page ============== */
@@ -605,6 +619,10 @@ footer .copyright {
    width: 55%;
   }
 
+  #navbar.sticky ul {
+    width: 90%;
+  }
+
   header nav ul {
     justify-content: space-between;
   }
@@ -634,7 +652,7 @@ footer .copyright {
   }
 
       /* Aside */
-
+/* 
   aside .content-wrapper {
     display:flex;
     justify-content: space-between;
@@ -650,7 +668,7 @@ footer .copyright {
   aside .content-wrapper .form {
     width: 45%;
     margin: 0;
-  }
+  } */
 
       /* Features */
 
@@ -695,7 +713,7 @@ footer .copyright {
 
   footer .content-wrapper {
     width: 65%;
-    margin: 100px 0;
+    margin: 50px 0;
   }
 
   footer .footer-content {
@@ -703,6 +721,10 @@ footer .copyright {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+  }
+
+  footer {
+  flex-direction: row;
   }
 
   footer h4 {
